fixed video and with of header on mobile

--- a/Coca-Cola/styles.css
+++ b/Coca-Cola/styles.css
@@ -97,6 +97,9 @@ a {
     padding: 0;
     margin: 0;
   }
+  .nav {
+    width: 70%;
+  }
 }
 
 .active .line:nth-child(1) {
@@ -514,6 +517,10 @@ li {
 iframe {
   width: 100%;
   height: 100vh;
+  object-fit: cover;
+}
+.commercial video {
+  width: 100%;
   object-fit: cover;
 }
 
